--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1075,6 +1075,7 @@ main{
   #detail {
     width:90%;
     padding: 0;
+    margin-top:100px;
     .wrapper {
       padding-left: 25%;
     }
@@ -1088,6 +1089,7 @@ main{
 
   #notification {
     width: 90%;
+    margin-top: 100px;
     .wrapper {
       padding-left: 25%;
     }
